pre Final commit

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <img src="images/user2.jpg" alt="">
                 <div class="user-info"> 
                     <h5>Jerome Walton</h5>
-                    <small> Yesterdoy </small>
+                    <small> Yesterday </small>
                 </div>
             </div>
         </div>
